gcc/testsuite/gdc.test/runnable/imports/test10442a.d
module imports.test10442a;

struct S
{
    int x;
    void* p;
}
