gcc/testsuite/gdc.test/fail_compilation/imports/fail21001b.d
module imports.fail21001b;

private struct S { Alias member; }

private alias Alias = int;
